extend duration of check-who-is-serving.sh script, make hostname more obvious, and fix the deploy-petclinic-native-as-knative-service.sh script

--- a/src/main/resources/templates/faas/empty.html
+++ b/src/main/resources/templates/faas/empty.html
@@ -7,9 +7,9 @@
         <br/>
     </h1>
     <h2>
-        <p style="color:white" th:text="'version: [' + ${version} + ']'"/>
-        <p style="color:white" th:text="'color: [' + ${color} + ']'"/>
-        <p style="color:white" th:text="'served by host: [' + ${hostname} + ']'"/>
+        <p style="color:white" th:text="'version: ' + ${version} "/>
+        <p style="color:white" th:text="'color: ' + ${color} "/>
+        <p style="color:white" th:text="'served by host: ' + ${hostname} "/>
     </h2>
 </div>
 </body>
