--- a/src/main/resources/templates/faas/empty.html
+++ b/src/main/resources/templates/faas/empty.html
@@ -7,21 +7,9 @@
         <br/>
 
         <table border="0" style="color:white;" cellpadding = "5" cellspacing = "5">
-            <tr>
-                <td>version</td>
-                <td>:</td>
-                <td><p th:text="${version}"/></td>
-            </tr>
-            <tr>
-                <td>served by host</td>
-                <td>:</td>
-                <td><p th:text="${hostname}"/></td>
-            </tr>
-            <tr>
-                <td>color</td>
-                <td>:</td>
-                <td><p th:text="${color}"/></td>
-            </tr>
+            <tr> <td>version</td> <td>:</td> <td><p th:text="${version}"/></td> </tr>
+            <tr> <td>served by host</td> <td>:</td> <td><p th:text="${hostname}"/></td> </tr>
+            <tr> <td>color</td> <td>:</td> <td><p th:text="${color}"/></td> </tr>
         </table>
     </h2>
 </div>
